# grpc-test

./: .gitignore  Cargo.toml  build.rs
proto/: data_transfer.proto
src/: client.rs  server.rs
