[package]
name = "grpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.2"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"